cmake_minimum_required(VERSION 3.16)
project(Hazel)

set(CMAKE_CXX_STANDARD 17)

if (${CMAKE_SIZEOF_VOID_P} EQUAL "8")
    set(ARCH "x64")
else()
    set(ARCH "x32")
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin/${CMAKE_BUILD_TYPE}-${CMAKE_HOST_SYSTEM_NAME}-${ARCH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin/${CMAKE_BUILD_TYPE}-${CMAKE_HOST_SYSTEM_NAME}-${ARCH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin/${CMAKE_BUILD_TYPE}-${CMAKE_HOST_SYSTEM_NAME}-${ARCH})

add_subdirectory(Hazel)
add_subdirectory(SandBox)